fixed the search layout issue

--- a/sass/_profile-kontakte.sass
+++ b/sass/_profile-kontakte.sass
@@ -42,6 +42,7 @@ $thumbnail-size: 70px
   float: left
   width: $thumbnail-size
   height: $thumbnail-size
+  margin-right: 0
 
 .kontakt-card__name
   float: left
